Fix conflict between ckeditor toolbar and userlist on small screens

--- a/customize.dist/src/less/dropdown.less
+++ b/customize.dist/src/less/dropdown.less
@@ -64,7 +64,7 @@
             .fa {
                 width: 20px;
                 text-align: center;
-                margin-right: 5px;
+                margin-right: 5px !important;
             }
 
             &:hover {
